ENH: Added icons for StudySelectionWidget advanced panel

--- a/Resources/qSlicerLongPETCTModule.qrc
+++ b/Resources/qSlicerLongPETCTModule.qrc
@@ -1,3 +1,7 @@
 <RCC>
-  <qresource/>
+    <qresource prefix="/">
+        <file>Icons/GPURendering.png</file>
+        <file>Icons/ViewRock.png</file>
+        <file>Icons/VolumeRendering.png</file>
+    </qresource>
 </RCC>
