--- a/Resources/qSlicerLongPETCTModule.qrc
+++ b/Resources/qSlicerLongPETCTModule.qrc
@@ -1,7 +1,10 @@
 <RCC>
     <qresource prefix="/">
+    	<file>Icons/LongPETCT.png</file>
         <file>Icons/GPURendering.png</file>
         <file>Icons/ViewRock.png</file>
         <file>Icons/VolumeRendering.png</file>
+        <file>Icons/add.png</file>
+        <file>Icons/delete.png</file>
     </qresource>
 </RCC>
