--- a/Resources/UI/qSlicerLongPETCTFindingSettingsDialog.ui
+++ b/Resources/UI/qSlicerLongPETCTFindingSettingsDialog.ui
@@ -6,68 +6,204 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>354</width>
-    <height>238</height>
+    <width>453</width>
+    <height>221</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="0,0">
-   <property name="horizontalSpacing">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="spacing">
     <number>8</number>
-   </property>
-   <property name="verticalSpacing">
-    <number>10</number>
    </property>
    <property name="margin">
     <number>25</number>
    </property>
-   <item row="0" column="0">
-    <widget class="QLabel" name="LabelName">
+   <item>
+    <layout class="QGridLayout" name="gridLayout" columnstretch="0,2,1,0">
+     <property name="horizontalSpacing">
+      <number>8</number>
+     </property>
+     <item row="0" column="0">
+      <widget class="QLabel" name="LabelName">
+       <property name="text">
+        <string>Finding Name:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="LabelType">
+       <property name="text">
+        <string>Finding Type:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" colspan="3">
+      <widget class="QLineEdit" name="LineEditName"/>
+     </item>
+     <item row="1" column="2">
+      <widget class="QPushButton" name="ButtonColor">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="ComboBoxType">
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="frame">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QPushButton" name="ButtonRemove">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../qSlicerLongPETCTModule.qrc">
+         <normaloff>:/Icons/delete.png</normaloff>:/Icons/delete.png</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="ctkExpandButton" name="ExpandButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
-      <string>Finding Name:</string>
+      <string>...</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="LineEditName"/>
+   <item>
+    <widget class="QWidget" name="WidgetAddType" native="true">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,2,1,0">
+      <property name="spacing">
+       <number>8</number>
+      </property>
+      <property name="margin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="LabelAddType">
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string>Add Type:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="LineEditNameAddType"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="ButtonColorAddType">
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="ButtonAddType">
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../qSlicerLongPETCTModule.qrc">
+          <normaloff>:/Icons/add.png</normaloff>:/Icons/add.png</iconset>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item>
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item>
     <widget class="QPushButton" name="ButtonApply">
      <property name="text">
       <string>Apply</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QTableWidget" name="Table">
-     <column>
-      <property name="text">
-       <string>Finding Type</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Color Name</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Color</string>
-      </property>
-     </column>
-    </widget>
-   </item>
   </layout>
  </widget>
- <resources/>
- <connections/>
+ <customwidgets>
+  <customwidget>
+   <class>ctkExpandButton</class>
+   <extends>QToolButton</extends>
+   <header>ctkExpandButton.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources>
+  <include location="../qSlicerLongPETCTModule.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>ExpandButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>WidgetAddType</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>182</x>
+     <y>106</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>182</x>
+     <y>138</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>ExpandButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>line</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>226</x>
+     <y>105</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>226</x>
+     <y>125</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
