--- a/Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
+++ b/Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
@@ -18,7 +18,7 @@
     <number>16</number>
    </property>
    <item>
-    <layout class="QFormLayout" name="formLayout">
+    <layout class="QFormLayout" name="FormLayout">
      <property name="fieldGrowthPolicy">
       <enum>QFormLayout::FieldsStayAtSizeHint</enum>
      </property>
@@ -33,7 +33,14 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBoxFinding" native="true"/>
+      <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBoxFinding" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
