ENH: Added help.png to resources

--- a/Resources/qSlicerLongPETCTModule.qrc
+++ b/Resources/qSlicerLongPETCTModule.qrc
@@ -8,5 +8,6 @@
     <file>Icons/VolumeRendering.png</file>
     <file>Icons/add.png</file>
     <file>Icons/delete.png</file>
+    <file>Icons/help.png</file>
   </qresource>
 </RCC>
