--- a/Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
+++ b/Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>335</width>
+    <width>301</width>
     <height>115</height>
    </rect>
   </property>
@@ -15,10 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
-    <number>16</number>
+    <number>0</number>
    </property>
    <item>
     <layout class="QFormLayout" name="FormLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMaximumSize</enum>
+     </property>
      <property name="fieldGrowthPolicy">
       <enum>QFormLayout::FieldsStayAtSizeHint</enum>
      </property>
@@ -57,41 +60,7 @@
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="ctkCheckBox" name="CheckBoxROIVisiblity">
-         <property name="text">
-          <string>ROI visibility</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-         <property name="indicatorIcon" stdset="0">
-          <iconset resource="../qSlicerLongPETCTModule.qrc">
-           <normaloff>:/Icons/VisibleOn.png</normaloff>
-           <normalon>:/Icons/VisibleOff.png</normalon>:/Icons/VisibleOn.png</iconset>
-         </property>
-         <property name="indicatorIconSize" stdset="0">
-          <size>
-           <width>21</width>
-           <height>21</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
+           <width>10</width>
            <height>20</height>
           </size>
          </property>
@@ -123,6 +92,40 @@
          </property>
          <property name="flat">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="ctkCheckBox" name="CheckBoxROIVisiblity">
+         <property name="text">
+          <string>ROI visibility</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <property name="indicatorIcon" stdset="0">
+          <iconset resource="../qSlicerLongPETCTModule.qrc">
+           <normaloff>:/Icons/VisibleOn.png</normaloff>
+           <normalon>:/Icons/VisibleOff.png</normalon>:/Icons/VisibleOn.png</iconset>
+         </property>
+         <property name="indicatorIconSize" stdset="0">
+          <size>
+           <width>21</width>
+           <height>21</height>
+          </size>
          </property>
         </widget>
        </item>
