--- a/Resources/qSlicerLongPETCTModule.qrc
+++ b/Resources/qSlicerLongPETCTModule.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="/">
+    <file>Icons/ViewSpin.png</file>
+    <file>Icons/qual_icon.png</file>
+    <file>Icons/quan_icon.png</file>
     <file>Icons/LongPETCT.png</file>
     <file>Icons/VisibleOff.png</file>
     <file>Icons/VisibleOn.png</file>
