--- a/Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
+++ b/Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>301</width>
-    <height>115</height>
+    <width>411</width>
+    <height>211</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,6 +28,9 @@
      <property name="horizontalSpacing">
       <number>12</number>
      </property>
+     <property name="verticalSpacing">
+      <number>12</number>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="LabelSelectFinding">
        <property name="text">
@@ -35,65 +38,17 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0,0,0">
-       <property name="spacing">
-        <number>12</number>
+     <item row="1" column="0">
+      <widget class="QLabel" name="LabelPlaceROI">
+       <property name="text">
+        <string>Place ROI:</string>
        </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBoxFinding" native="true">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Expanding</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>10</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="ButtonHelp">
-         <property name="maximumSize">
-          <size>
-           <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../qSlicerLongPETCTModule.qrc">
-           <normaloff>:/Icons/help.png</normaloff>:/Icons/help.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>16</width>
-           <height>16</height>
-          </size>
-         </property>
-         <property name="shortcut">
-          <string>Ctrl+S</string>
-         </property>
-         <property name="flat">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBoxFinding" native="true"/>
        </item>
        <item>
         <spacer name="horizontalSpacer_2">
@@ -130,6 +85,26 @@
         </widget>
        </item>
       </layout>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="ButtonPlaceROI">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../qSlicerLongPETCTModule.qrc">
+         <normaloff>:/Icons/AnnotationROIWithArrow.png</normaloff>:/Icons/AnnotationROIWithArrow.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>18</width>
+         <height>18</height>
+        </size>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
