--- a/Resources/UI/qSlicerLongPETCTAnalysisSettingsWidget.ui
+++ b/Resources/UI/qSlicerLongPETCTAnalysisSettingsWidget.ui
@@ -128,19 +128,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0" rowspan="2">
-      <widget class="QListWidget" name="ListSelectedObjects">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QListWidget::item { margin-bottom: 5px; color: #000;}</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QWidget" name="WidgetButtonsPanel" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -235,6 +222,16 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0" rowspan="2">
+      <widget class="qSlicerLongPETCTStudySelectionTableWidget" name="TableStudyAnalysisSelection" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -264,6 +261,12 @@
    <class>ctkExpandButton</class>
    <extends>QToolButton</extends>
    <header>ctkExpandButton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>qSlicerLongPETCTStudySelectionTableWidget</class>
+   <extends>QWidget</extends>
+   <header>qslicerlongpetctstudyselectiontablewidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources>
